add slides for talk 19

--- a/index.html
+++ b/index.html
@@ -473,7 +473,10 @@
                   <td>15:20 – 15:40</td>
                   <td>🔬</td>
                   <td>
-                    <span class="talk"><a href="pre/paper19.pdf">FlaDaGe: A Framework for Generation of Synthetic Data to Compare Flakiness Scores</a></span>
+                    <span class="talk">
+                      <a href="pre/paper19.pdf">FlaDaGe: A Framework for Generation of Synthetic Data to Compare Flakiness Scores</a>
+                      (<a href="slides/deck19.pdf" class="ext">🖥️slides</a>)
+                    </span>
                     <br>
                     <span class="author">Mert Ege Can</span>,
                     <span class="author presenter">Joanna Kisaakye</span>,
