--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
 
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4886.145664533968!2d6.848552289726094!3d52.24206074261589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b813c89a5f5b5d%3A0xb418abdfcf79aa17!2sU%20Parkhotel!5e0!3m2!1sen!2snl!4v1762341330387!5m2!1sen!2snl"
-            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            width="100%" height="450" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         <p class="text">
@@ -923,6 +923,9 @@
         <br>
 
         <h4>Important Dates</h4>
+        <p>
+          <iframe src="https://free.timeanddate.com/clock/ia5w9wr9/n3399/tluk/fn4/fs24/tct/pct/tt0/tw1/tm1/td2/th1/ta1/tb4" width="100%" height="60" allowtransparency="true"></iframe>
+        </p>
         <p class="text">
           All dates are in the Anywhere on Earth (AoE, 23:59) calendar designation.
         </p>
@@ -930,7 +933,7 @@
           <li><strong>Submission Deadline:</strong> Fri 3 October 2025</li>
           <li><strong>Author Notification Deadline:</strong> Fri 24 October 2025</li>
           <li><strong>Author Registration Deadline:</strong> Mon 10 November 2025</li>
-          <li><a href="pre"><strong class="grn">Pre</strong>-<strong class="blk">proceedings</strong></a> Camera-Ready Deadline:</b> Fri 7 November 2025 (📒<a href="pre">online</a>)</li>
+          <li><strong><a href="pre" class="blk"><span class="grn">Pre</span>-proceedings</a> Camera-Ready Deadline:</strong> Fri 7 November 2025 (📒<a href="pre">online</a>)</li>
           <li><strong>Workshop Date:</strong> Mon–Tue 17–18 November 2025</li>
           <li><strong><span class="grn">Post</span>-proceedings Camera-Ready Deadline:</strong> Fri <strong class="red">19 December 2025</strong></li>
         </ul>
