even more correct spelling of a name

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                   <td>
                     <span class="talk"><a href="https://github.com/2tolgahan2/RESTCov" class="ext">RESTCov</a></span>
                     by
-                    <span class="author presenter">Tolga</span><span class="author">han Bardakci</span>
+                    <span class="author presenter">Tolga</span><span class="author">han Bardakcı</span>
                   </td>
                 </tr>
               </table>
