fix some inconsistencies with automation

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#program-day2">Programme</a>
+          <a class="nav-link js-scroll-trigger" href="#program">Programme</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#community">Community</a>
@@ -144,7 +144,9 @@
                   <td>11:30 – 11:50</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper01.pdf">An Introduction to Indirect Code Completion</a></span>
+                    <span class="talk">
+                      <a href="pre/paper01.pdf">An Introduction to Indirect Code Completion</a>
+                    </span>
                     <br>
                     <span class="author presenter">Nhat</span>,
                     <span class="author">Vadim Zaytsev</span>
@@ -154,7 +156,9 @@
                   <td>11:50 – 12:00</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper02.pdf">Same Size, Different Costs: Phase-Level Energy Variations in Transformer Models during Code Generation</a></span>
+                    <span class="talk">
+                      <a href="pre/paper02.pdf">Same Size, Different Costs: Phase-Level Energy Variations in Transformer Models during Code Generation</a>
+                    </span>
                     <br>
                     <span class="author presenter">Lola Solovyeva</span>
                   </td>
@@ -206,7 +210,10 @@
                   <td>14:00 – 14:10</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper05.pdf">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a> (cf. <a href="https://doi.org/10.1016/j.scico.2025.103393" class="ext">SCP</a>)</span>
+                    <span class="talk">
+                      <a href="pre/paper05.pdf">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a>
+                      (cf. <a href="https://doi.org/10.1016/j.scico.2025.103393" class="ext">SCP</a>)
+                    </span>
                     <br>
                     <span class="author presenter">Yunior Pacheco</span>,
                     <span class="author">Coen De Roover</span>,
@@ -217,7 +224,9 @@
                   <td>14:10 – 14:20</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper06.pdf">An Analysis of Code Clones in GitHub Actions Workflows</a></span>
+                    <span class="talk">
+                      <a href="pre/paper06.pdf">An Analysis of Code Clones in GitHub Actions Workflows</a>
+                    </span>
                     <br>
                     <span class="author presenter">Guillaume Cardoen</span>,
                     <span class="author">Alexandre Decan</span>,
@@ -245,7 +254,10 @@
                   <td>14:35 – 14:55</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper08.pdf">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and <abbr title="Large Language Model">LLM</abbr> Translation</a> (cf. <a href="https://doi.org/10.18653/v1/2024.findings-acl.939" class="ext">ACL’24</a> &amp; <a href="https://github.com/krinara86/Bridge-Benevol" class="ext">GitHub</a>)</span>
+                    <span class="talk">
+                      <a href="pre/paper08.pdf">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and <abbr title="Large Language Model">LLM</abbr> Translation</a>
+                      (cf. <a href="https://doi.org/10.18653/v1/2024.findings-acl.939" class="ext">ACL’24</a> &amp; <a href="https://github.com/krinara86/Bridge-Benevol" class="ext">GitHub</a>)
+                    </span>
                     <br>
                     <span class="author presenter">Krishna Narasimhan</span>,
                     <span class="author">Mairieli Wessel</span>
@@ -255,7 +267,10 @@
                   <td>14:55 – 15:05</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper09.pdf">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</a> (cf. <a href="https://doi.org/10.1145/3643991.3644867" class="ext">MSR’24</a>)</span>
+                    <span class="talk">
+                      <a href="pre/paper09.pdf">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</a>
+                      (cf. <a href="https://doi.org/10.1145/3643991.3644867" class="ext">MSR’24</a>)
+                    </span>
                     <br>
                     <span class="author presenter">Hassan Onsori Delicheh</span>,
                     <span class="author">Guillaume Cardoen</span>,
@@ -299,7 +314,7 @@
                   <td>
                     <span class="talk">
                       <a href="pre/paper11.pdf">ClassViz: From Verification Tool to Research Vessel</a>
-                      (<a href="https://doi.org/10.1109/MSR59073.2023.00029" class="ext">MSR’23</a> &amp; <a href="https://github.com/rsatrioadi/classviz" class="ext">GitHub</a>)
+                      (cf. <a href="https://doi.org/10.1109/MSR59073.2023.00029" class="ext">MSR’23</a> &amp; <a href="https://github.com/rsatrioadi/classviz" class="ext">GitHub</a>)
                       (<a href="slides/deck11.pdf" class="ext">🖥️slides</a>)
                     </span>
                     <br>
@@ -376,7 +391,9 @@
                   <td>11:00 – 11:20</td>
                   <td>🔬</td>
                   <td>
-                    <span class="talk"><a href="pre/paper13.pdf">On the Evolution of Direct Dependencies in <code>npm</code> Packages</a></span>
+                    <span class="talk">
+                      <a href="pre/paper13.pdf">On the Evolution of Direct Dependencies in <code>npm</code> Packages</a>
+                    </span>
                     <br>
                     <span class="author presenter">Shahin Ebrahimi-Kia</span>,
                     <span class="author">Jesús M. González-Barahona</span>,
@@ -389,33 +406,22 @@
                   <td>11:20 – 11:30</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper14.pdf">An Empirical Analysis of the GitHub Actions Language Usage and Evolution</a></span>
+                    <span class="talk">
+                      <a href="pre/paper14.pdf">An Empirical Analysis of the GitHub Actions Language Usage and Evolution</a>
+                    </span>
                     <br>
                     <span class="author presenter">Aref Talebzadeh Bardsiri</span>,
                     <span class="author">Alexandre Decan</span>,
                     <span class="author">Tom Mens</span>
                   </td>
                 </tr>
-                <!--
                 <tr>
                   <td>11:30 – 11:40</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper15.pdf">Language-Level Support for Multiple Versions for Software Evolution</a></span>
-                    <br>
-                    <span class="presenter">Tomoyuki Aotani</span>,
-                    <span class="presenter">Satsuki Kasuya</span>,
-                    <span class="presenter">Luthfan Lubis</span>,
-                    <span class="presenter">Hidehiko Masuhara</span>,
-                    <span class="presenter">Yudai Tanabe</span>
-                  </td>
-                </tr>
-                -->
-                <tr>
-                  <td>11:30 – 11:40</td>
-                  <td>🌟</td>
-                  <td>
-                    <span class="talk"><a href="pre/paper16.pdf">On the Transferability of a Bot Detection Model from GitHub to GitLab</a></span>
+                    <span class="talk">
+                      <a href="pre/paper16.pdf">On the Transferability of a Bot Detection Model from GitHub to GitLab</a>
+                    </span>
                     <br>
                     <span class="author presenter">Cyril Moreau</span>
                   </td>
@@ -424,7 +430,9 @@
                   <td>11:40 – 11:50</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper17.pdf">Evolution-Resilient Class Contours</a></span>
+                    <span class="talk">
+                      <a href="pre/paper17.pdf">Evolution-Resilient Class Contours</a>
+                    </span>
                     <br>
                     <span class="author presenter">Mattia Giannaccari</span>,
                     <span class="author">Marco Raglianti</span>
@@ -463,7 +471,9 @@
                   <td>15:00 – 15:20</td>
                   <td>🔁</td>
                   <td>
-                    <span class="talk"><a href="pre/paper20.pdf">Evaluating Test-Driven Code Generation: A Replication Study</a></span>
+                    <span class="talk">
+                      <a href="pre/paper20.pdf">Evaluating Test-Driven Code Generation: A Replication Study</a>
+                    </span>
                     <br>
                     <span class="author presenter">Giovanni Rosa</span>,
                     <span class="author">Jesús Maria González-Barahona</span>
@@ -488,7 +498,9 @@
                   <td>15:40 – 16:00</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper18.pdf">Preliminary Survey on <abbr title="Cyber-Physical System">CPS</abbr> Testing in Various Domains of the Industry</a></span>
+                    <span class="talk">
+                      <a href="pre/paper18.pdf">Preliminary Survey on <abbr title="Cyber-Physical System">CPS</abbr> Testing in Various Domains of the Industry</a>
+                    </span>
                     <br>
                     <span class="author">Guillaume Nguyen</span>,
                     <span class="author presenter">Xavier Devroey</span>
