--- a/pre/index.html
+++ b/pre/index.html
@@ -34,7 +34,7 @@
         <li>
           <a href="paper01.pdf" class="title">An Introduction to Indirect Code Completion</a>
           <span class="pages">1–6</span>
-          <div class="authors">Nhat and Vadim Zaytsev</div>
+          <div class="authors">Nhat, Vadim Zaytsev</div>
           <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
         <li>
@@ -44,15 +44,15 @@
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
-          <a href="paper03.pdf" class="title">The Cost of AI-Assisted Coding: Energy vs. Accuracy in Language Models</a>
+          <a href="paper03.pdf" class="title">The Cost of <abbr title="Artificial Intelligence">AI</abbr>-Assisted Coding: Energy vs. Accuracy in Language Models</a>
           <span class="pages">9–11</span>
-          <div class="authors">Negar Alizadeh, Boris Belchev, Nishant Saurabh, and Patricia Kelbert</div>
+          <div class="authors">Negar Alizadeh, Boris Belchev, Nishant Saurabh, Patricia Kelbert</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
-          <a href="paper04.pdf" class="title">Bridging CPU and GPU in Rust</a>
-          <span class="pages">12-17</span>
-          <div class="authors">Niek Aukes, Cristian-Andrei Begu, and Georgiana Caltais</div>
+          <a href="paper04.pdf" class="title">Bridging <abbr title="Central Processing Unit">CPU</abbr> and <abbr title="Graphics Processing Unit">GPU</abbr> in Rust</a>
+          <span class="pages">12–17</span>
+          <div class="authors">Niek Aukes, Cristian-Andrei Begu, Georgiana Caltais</div>
           <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
       </ul>
@@ -63,31 +63,31 @@
         <li>
           <a href="paper05.pdf" class="title">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a>
           <span class="pages">18–19</span>
-          <div class="authors">Yunior Pacheco, Coen De Roover, and Johannes Härtel</div>
+          <div class="authors">Yunior Pacheco, Coen De Roover, Johannes Härtel</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
           <a href="paper06.pdf" class="title">An Analysis of Code Clones in GitHub Actions Workflows</a>
           <span class="pages">20–21</span>
-          <div class="authors">Guillaume Cardoen, Alexandre Decan, and Tom Mens</div>
+          <div class="authors">Guillaume Cardoen, Alexandre Decan, Tom Mens</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
           <a href="paper07.pdf" class="title">A Method for Inferring Python Proficiency from Textbooks</a>
           <span class="pages">22–23</span>
-          <div class="authors">Ruksit Rojpaisarnkit, Gregorio Robles, Jesús M. González-Barahona, Kenichi Matsumoto, and Raula Gaikovina Kula</div>
+          <div class="authors">Ruksit Rojpaisarnkit, Gregorio Robles, Jesús M. González-Barahona, Kenichi Matsumoto, Raula Gaikovina Kula</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
-          <a href="paper08.pdf" class="title">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and LLM Translation</a>
+          <a href="paper08.pdf" class="title">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and <abbr title="Large Language Model">LLM</abbr> Translation</a>
           <span class="pages">24–32</span>
-          <div class="authors">Krishna Narasimhan and Mairieli Wessel</div>
-          <div class="class">🔬<span>CORE (Cutting-edge Original Research on Evolution)</span></div>
+          <div class="authors">Krishna Narasimhan, Mairieli Wessel</div>
+          <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
         <li>
           <a href="paper09.pdf" class="title">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</a>
           <span class="pages">33–34</span>
-          <div class="authors">Hassan Onsori Delicheh, Guillaume Cardoen, Alexandre Decan, and Tom Mens</div>
+          <div class="authors">Hassan Onsori Delicheh, Guillaume Cardoen, Alexandre Decan, Tom Mens</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
       </ul>
@@ -97,20 +97,20 @@
       <ul>
         <li>
           <a href="paper10.pdf" class="title">On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</a>
-          <span class="pages">35-41</span>
-          <div class="authors">Wouter ten Brinke, Bart Griepsma, Aleksandra Ignatovič, Nhat, and Vadim Zaytsev</div>
+          <span class="pages">35–41</span>
+          <div class="authors">Wouter ten Brinke, Bart Griepsma, Aleksandra Ignatovič, Nhat, Vadim Zaytsev</div>
           <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
         <li>
           <a href="paper11.pdf" class="title">ClassViz: From Verification Tool to Research Vessel</a>
-          <span class="pages">42-48</span>
+          <span class="pages">42–48</span>
           <div class="authors">Satrio Adi Rukmono</div>
           <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
         <li>
           <a href="paper12.pdf" class="title">Pseudonymization as a Service: Compartmentalizing and Controlling Data Processing in Evolving Systems with Micropseudonymization</a>
           <span class="pages">49–62</span>
-          <div class="authors">Job Doesburg, Bernard van Gastel, and Erik Poll</div>
+          <div class="authors">Job Doesburg, Bernard van Gastel, Erik Poll</div>
           <div class="class">🔬<span>CORE (Cutting-edge Original Research on Evolution)</span></div>
         </li>
       </ul>
@@ -119,21 +119,21 @@
       Section “<strong>Evolving Software Ecosystems</strong>”
       <ul>
         <li>
-          <a href="paper13.pdf" class="title">On the Evolution of Direct Dependencies in npm Packages</a>
+          <a href="paper13.pdf" class="title">On the Evolution of Direct Dependencies in <code>npm</code> Packages</a>
           <span class="pages">63–74</span>
-          <div class="authors">Shahin Ebrahimi-Kia, Jesús M. González-Barahona, David Moreno-Lumbreras, Gregorio Robles, and Tom Mens</div>
+          <div class="authors">Shahin Ebrahimi-Kia, Jesús M. González-Barahona, David Moreno-Lumbreras, Gregorio Robles, Tom Mens</div>
           <div class="class">🔬<span>CORE (Cutting-edge Original Research on Evolution)</span></div>
         </li>
         <li>
           <a href="paper14.pdf" class="title">An Empirical Analysis of the GitHub Actions Language Usage and Evolution</a>
           <span class="pages">75–76</span>
-          <div class="authors">Aref Talebzadeh Bardsiri, Alexandre Decan, and Tom Mens</div>
+          <div class="authors">Aref Talebzadeh Bardsiri, Alexandre Decan, Tom Mens</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
           <a href="paper15.pdf" class="title">Language-Level Support for Multiple Versions for Software Evolution</a>
           <span class="pages">77–78</span>
-          <div class="authors">Tomoyuki Aotani, Satsuki Kasuya, Luthfan Lubis, Hidehiko Masuhara, and Yudai Tanabe</div>
+          <div class="authors">Tomoyuki Aotani, Satsuki Kasuya, Luthfan Lubis, Hidehiko Masuhara, Yudai Tanabe</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
@@ -145,7 +145,7 @@
         <li>
           <a href="paper17.pdf" class="title">Evolution-Resilient Class Contours</a>
           <span class="pages">81–82</span>
-          <div class="authors">Mattia Giannaccari and Marco Raglianti</div>
+          <div class="authors">Mattia Giannaccari, Marco Raglianti</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
       </ul>
@@ -154,21 +154,21 @@
       Section “<strong>Software Testing</strong>”
       <ul>
         <li>
-          <a href="paper11.pdf" class="title">Preliminary survey on CPS testing in various domains of the industry</a>
-          <span class="pages">83-89</span>
-          <div class="authors">Guillaume Nguyen and Xavier Devroey</div>
+          <a href="paper18.pdf" class="title">Preliminary Survey on <abbr title="Cyber-Physical System">CPS</abbr> Testing in Various Domains of the Industry</a>
+          <span class="pages">83–90</span>
+          <div class="authors">Guillaume Nguyen, Xavier Devroey</div>
           <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
         <li>
-          <a href="paper12.pdf" class="title">FlaDaGe: A Framework for Generation of Synthetic Data to Compare Flakiness Scores</a>
-          <span class="pages">90–103</span>
-          <div class="authors">Mert Ege Can, Joanna Kisaakye, Mutlu Beyazıt, and Serge Demeyer</div>
+          <a href="paper19.pdf" class="title">FlaDaGe: A Framework for Generation of Synthetic Data to Compare Flakiness Scores</a>
+          <span class="pages">91–109</span>
+          <div class="authors">Mert Ege Can, Joanna Kisaakye, Mutlu Beyazıt, Serge Demeyer</div>
           <div class="class">🔬<span>CORE (Cutting-edge Original Research on Evolution)</span></div>
         </li>
         <li>
-          <a href="paper12.pdf" class="title">Evaluating Test-Driven Code Generation: A Replication Study</a>
-          <span class="pages">104–117</span>
-          <div class="authors">Giovanni Rosa and Jesús Maria González-Barahona</div>
+          <a href="paper20.pdf" class="title">Evaluating Test-Driven Code Generation: A Replication Study</a>
+          <span class="pages">110–120</span>
+          <div class="authors">Giovanni Rosa, Jesús Maria González-Barahona</div>
           <div class="class">🔁<span>REAP (Reproduced, Examined, or Analysed Papers)</span></div>
         </li>
       </ul>
