easily move the page count up and generate BibTeX files

--- a/pre/index.html
+++ b/pre/index.html
@@ -33,25 +33,25 @@
       <ul>
         <li>
           <a href="paper01.pdf" class="title">An Introduction to Indirect Code Completion</a>
-          <span class="pages">1–6</span>
+          <span class="pages"><a href="paper01.bib">5–10</a></span>
           <div class="authors">Nhat, Vadim Zaytsev</div>
           <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
         <li>
           <a href="paper02.pdf" class="title">Same Size, Different Costs: Phase-Level Energy Variations in Transformer Models during Code Generation</a>
-          <span class="pages">7–8</span>
+          <span class="pages"><a href="paper02.bib">11–12</a></span>
           <div class="authors">Lola Solovyeva</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
           <a href="paper03.pdf" class="title">The Cost of <abbr title="Artificial Intelligence">AI</abbr>-Assisted Coding: Energy vs. Accuracy in Language Models</a>
-          <span class="pages">9–11</span>
+          <span class="pages"><a href="paper03.bib">13–15</a></span>
           <div class="authors">Negar Alizadeh, Boris Belchev, Nishant Saurabh, Patricia Kelbert</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
           <a href="paper04.pdf" class="title">Bridging <abbr title="Central Processing Unit">CPU</abbr> and <abbr title="Graphics Processing Unit">GPU</abbr> in Rust</a>
-          <span class="pages">12–17</span>
+          <span class="pages"><a href="paper04.bib">16–21</a></span>
           <div class="authors">Niek Aukes, Cristian-Andrei Begu, Georgiana Caltais</div>
           <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
@@ -62,31 +62,31 @@
       <ul>
         <li>
           <a href="paper05.pdf" class="title">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a>
-          <span class="pages">18–19</span>
+          <span class="pages"><a href="paper05.bib">22–23</a></span>
           <div class="authors">Yunior Pacheco, Coen De Roover, Johannes Härtel</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
           <a href="paper06.pdf" class="title">An Analysis of Code Clones in GitHub Actions Workflows</a>
-          <span class="pages">20–21</span>
+          <span class="pages"><a href="paper06.bib">24–25</a></span>
           <div class="authors">Guillaume Cardoen, Alexandre Decan, Tom Mens</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
           <a href="paper07.pdf" class="title">A Method for Inferring Python Proficiency from Textbooks</a>
-          <span class="pages">22–23</span>
+          <span class="pages"><a href="paper07.bib">26–27</a></span>
           <div class="authors">Ruksit Rojpaisarnkit, Gregorio Robles, Jesús M. González-Barahona, Kenichi Matsumoto, Raula Gaikovina Kula</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
           <a href="paper08.pdf" class="title">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and <abbr title="Large Language Model">LLM</abbr> Translation</a>
-          <span class="pages">24–32</span>
+          <span class="pages"><a href="paper08.bib">28–36</a></span>
           <div class="authors">Krishna Narasimhan, Mairieli Wessel</div>
           <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
         <li>
           <a href="paper09.pdf" class="title">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</a>
-          <span class="pages">33–34</span>
+          <span class="pages"><a href="paper09.bib">37–38</a></span>
           <div class="authors">Hassan Onsori Delicheh, Guillaume Cardoen, Alexandre Decan, Tom Mens</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
@@ -97,19 +97,19 @@
       <ul>
         <li>
           <a href="paper10.pdf" class="title">On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</a>
-          <span class="pages">35–41</span>
+          <span class="pages"><a href="paper10.bib">39–45</a></span>
           <div class="authors">Wouter ten Brinke, Bart Griepsma, Aleksandra Ignatovič, Nhat, Vadim Zaytsev</div>
           <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
         <li>
           <a href="paper11.pdf" class="title">ClassViz: From Verification Tool to Research Vessel</a>
-          <span class="pages">42–48</span>
+          <span class="pages"><a href="paper11.bib">46–52</a></span>
           <div class="authors">Satrio Adi Rukmono</div>
           <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
         <li>
           <a href="paper12.pdf" class="title">Pseudonymization as a Service: Compartmentalizing and Controlling Data Processing in Evolving Systems with Micropseudonymization</a>
-          <span class="pages">49–62</span>
+          <span class="pages"><a href="paper12.bib">53–66</a></span>
           <div class="authors">Job Doesburg, Bernard van Gastel, Erik Poll</div>
           <div class="class">🔬<span>CORE (Cutting-edge Original Research on Evolution)</span></div>
         </li>
@@ -120,31 +120,31 @@
       <ul>
         <li>
           <a href="paper13.pdf" class="title">On the Evolution of Direct Dependencies in <code>npm</code> Packages</a>
-          <span class="pages">63–74</span>
+          <span class="pages"><a href="paper13.bib">67–78</a></span>
           <div class="authors">Shahin Ebrahimi-Kia, Jesús M. González-Barahona, David Moreno-Lumbreras, Gregorio Robles, Tom Mens</div>
           <div class="class">🔬<span>CORE (Cutting-edge Original Research on Evolution)</span></div>
         </li>
         <li>
           <a href="paper14.pdf" class="title">An Empirical Analysis of the GitHub Actions Language Usage and Evolution</a>
-          <span class="pages">75–76</span>
+          <span class="pages"><a href="paper14.bib">79–80</a></span>
           <div class="authors">Aref Talebzadeh Bardsiri, Alexandre Decan, Tom Mens</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
           <a href="paper15.pdf" class="title">Language-Level Support for Multiple Versions for Software Evolution</a>
-          <span class="pages">77–78</span>
+          <span class="pages"><a href="paper15.bib">81–82</a></span>
           <div class="authors">Tomoyuki Aotani, Satsuki Kasuya, Luthfan Lubis, Hidehiko Masuhara, Yudai Tanabe</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
           <a href="paper16.pdf" class="title">On the Transferability of a Bot Detection Model from GitHub to GitLab</a>
-          <span class="pages">79–80</span>
+          <span class="pages"><a href="paper16.bib">83–84</a></span>
           <div class="authors">Cyril Moreau</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
         <li>
           <a href="paper17.pdf" class="title">Evolution-Resilient Class Contours</a>
-          <span class="pages">81–82</span>
+          <span class="pages"><a href="paper17.bib">85–86</a></span>
           <div class="authors">Mattia Giannaccari, Marco Raglianti</div>
           <div class="class">🌟<span>SHOW (Summary of Highlights and Outstanding Work)</span></div>
         </li>
@@ -155,19 +155,19 @@
       <ul>
         <li>
           <a href="paper18.pdf" class="title">Preliminary Survey on <abbr title="Cyber-Physical System">CPS</abbr> Testing in Various Domains of the Industry</a>
-          <span class="pages">83–90</span>
+          <span class="pages"><a href="paper18.bib">87–94</a></span>
           <div class="authors">Guillaume Nguyen, Xavier Devroey</div>
           <div class="class">🚀<span>DIVE (Disruptive Ideas and Visionary Explorations)</span></div>
         </li>
         <li>
           <a href="paper19.pdf" class="title">FlaDaGe: A Framework for Generation of Synthetic Data to Compare Flakiness Scores</a>
-          <span class="pages">91–109</span>
+          <span class="pages"><a href="paper19.bib">95–113</a></span>
           <div class="authors">Mert Ege Can, Joanna Kisaakye, Mutlu Beyazıt, Serge Demeyer</div>
           <div class="class">🔬<span>CORE (Cutting-edge Original Research on Evolution)</span></div>
         </li>
         <li>
           <a href="paper20.pdf" class="title">Evaluating Test-Driven Code Generation: A Replication Study</a>
-          <span class="pages">110–120</span>
+          <span class="pages"><a href="paper20.bib">114–124</a></span>
           <div class="authors">Giovanni Rosa, Jesús Maria González-Barahona</div>
           <div class="class">🔁<span>REAP (Reproduced, Examined, or Analysed Papers)</span></div>
         </li>
