--- a/pre/index.html
+++ b/pre/index.html
@@ -26,6 +26,7 @@
     <li>Collected by <a href="https://fernandocastor.github.io/">Fernando Castor</a> (Programme Chair)</li>
     <li>Reviewed by <a href="https://benevol2025.github.io/#committee">the PC of BENEVOL 2025</a></li>
   </ul>
+  <h3><a href="proceedings.pdf">Download as one PDF book (125 pages, 47 MBytes)</a></h3>
   <h2>Table of Contents</h2>
   <ul>
     <li>
