--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                   <td>
                     <span class="talk">
                       <a href="pre/paper02.pdf">Same Size, Different Costs: Phase-Level Energy Variations in Transformer Models during Code Generation</a>
+                      (<a href="slides/deck02.pdf" class="ext">🖥️slides</a>)
                     </span>
                     <br>
                     <span class="author presenter">Lola Solovyeva</span>
