filter empty lines because we can; link to the next year

--- a/index.html
+++ b/index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="BENEVOL: The 24th Belgium-Netherlands Software Evolution Workshop">
   <meta name="author" content="Vadim Zaytsev">
   <title>BENEVOL 2025</title>
-
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300italic,400,400italic,700,700italic"
         rel="stylesheet" type="text/css">
-
   <link href="css/creative.css" rel="stylesheet">
   <link href="css/mundane.css" rel="stylesheet">
 </head>
-
 <body id="page-top">
-
-<!-- Navigation -->
 <nav class="navbar navbar-expand-lg" id="mainNav">
   <div class="container">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">BENEVOL 2025</a>
@@ -52,8 +45,6 @@
     </div>
   </div>
 </nav>
-
-<!-- Masthead -->
 <header class="masthead">
   <div class="container">
     <div class="row outer">
@@ -69,11 +60,9 @@
     </div>
   </div>
 </header>
-
 <section id="program">
   <div class="container">
     <h2>Programme</h2>
-    <div style="text-align: center;">(tentative; see also ❗<a href="pre">pre-proceedings</a>❗)</div>
     <hr>
     <div class="col">
       <div class="row">
@@ -83,7 +72,6 @@
           <span class="author presenter">Presenters</span> are underlined among <span class="author">authors</span>.
         </p>
       </div>
-
       <div class="row">
         <table class="table sch">
           <tbody>
@@ -199,6 +187,7 @@
                   <td>
                     <span class="talk">
                       <a href="pre/paper04.pdf">Bridging <abbr title="Central Processing Unit">CPU</abbr> and <abbr title="Graphics Processing Unit">GPU</abbr> in Rust</a>
+                      (cf. <a href="https://purl.utwente.nl/essays/100981" class="ext">MSc</a> &amp; <a href="https://purl.utwente.nl/essays/107371" class="ext">MSc</a>)
                       (<a href="slides/deck04.pdf" class="ext">🖥️slides</a>)
                     </span>
                     <br>
@@ -592,7 +581,6 @@
     </div>
   </div>
 </section>
-
 <section id="community">
   <div class="container">
     <h2>Community</h2>
@@ -698,7 +686,6 @@
     </div>
   </div>
 </section>
-
 <section id="committee">
   <div class="container">
     <h2>Programme Committee</h2>
@@ -778,7 +765,6 @@
     </div>
   </div>
 </section>
-
 <section id="venue">
   <div class="container">
     <h2>Venue and Registration</h2>
@@ -792,12 +778,10 @@
           The pre-opening on Day 0 (16 November) takes place in the city centre of Enschede.
           The social event on Day 2 (18 November) takes place in the Carré building on the campus.
         </p>
-
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4886.145664533968!2d6.848552289726094!3d52.24206074261589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b813c89a5f5b5d%3A0xb418abdfcf79aa17!2sU%20Parkhotel!5e0!3m2!1sen!2snl!4v1762341330387!5m2!1sen!2snl"
             width="100%" height="450" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
-
         <p class="text">
           The University of Twente is located between two cities: <strong>Hengelo</strong> and <strong>Enschede</strong>.
           We recommend choosing one of the following options for your stay:
@@ -848,7 +832,6 @@
     </div>
   </div>
 </section>
-
 <section id="cfp">
   <div class="container">
     <h2>Call for Papers</h2>
@@ -934,7 +917,6 @@
           Post-proceedings will be submitted to <a href="http://ceur-ws.org/">CEUR-WS.org</a> in early 2026.
         </p>
         <br>
-
         <h4>Important Dates</h4>
         <p>
           <iframe src="https://free.timeanddate.com/clock/ia5w9wr9/n3399/tluk/fn4/fs24/tct/pct/tt0/tw1/tm1/td2/th1/ta1/tb4" width="100%" height="60" allowtransparency="true"></iframe>
@@ -954,7 +936,6 @@
     </div>
   </div>
 </section>
-
 <section id="history">
   <div class="container">
     <h2>History</h2>
@@ -962,6 +943,9 @@
     <div class="row">
       <div class="col">
         <ul>
+          <li>
+            🇪🇸 BENEVOL 2026 in Madrid
+          </li>
           <li>
             🇳🇱 <a href="https://benevol2025.github.io">BENEVOL 2025</a> in Enschede
           </li>
@@ -1008,16 +992,12 @@
             BENEVOL 2014</a> in Amsterdam
           </li>
           <li>🇧🇪 BENEVOL 2013 in Mons</li>
-          <!-- https://www.cetic.be/Seminaire-BENEVOL-2013-1943 -->
           <li>🇳🇱 BENEVOL 2012 in Delft</li>
-          <!-- https://www.slideshare.net/slideshow/benevol-2013-keynote-the-social-software-revolution/15480756 -->
           <li>🇧🇪 <a href="https://soft.vub.ac.be/benevol2011/">BENEVOL 2011</a> in Brussels</li>
           <li>🇫🇷 <a href="https://web.archive.org/web/20120118115045/http://rmod.lille.inria.fr/benevol/">BENEVOL
             2010</a> in Lille
           </li>
-          <!-- https://researchr.org/conference/benevol-2010 -->
           <li>🇧🇪 BENEVOL 2009 in Louvain-la-Neuve</li>
-          <!-- https://www.cetic.be/CETIC-au-Workshop-BENEVOL-2009 -->
           <li>🇳🇱 <a href="https://web.archive.org/web/20240219062714/https://www-set.win.tue.nl/benevol2008/">BENEVOL
             2008</a> in Eindhoven
           </li>
@@ -1043,17 +1023,9 @@
     </div>
   </div>
 </section>
-
-<!-- Bootstrap core JavaScript -->
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
-
-<!-- Plugin JavaScript -->
 <script src="js/jquery.easing.min.js"></script>
-
-<!-- Custom scripts for this template -->
 <script src="js/creative.min.js"></script>
-
 </body>
-
 </html>
