closer to conformance

--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
               <br>🍻<a href="https://twentschefoodhal.nl/">Twentsche Foodhal</a>🍔
             </td>
           </tr>
-          <tr class="sep">
-            <td></td>
-          </tr>
+          <tr class="sep"></tr>
           <tr>
             <th colspan="2">
               <div class="big-day">17</div>
@@ -367,9 +365,7 @@
             <td>18:00 – 23:00</td>
             <td>🍜 Dinner at U Park Hotel</td>
           </tr>
-          <tr class="sep">
-            <td>&nbsp;</td>
-          </tr>
+          <tr class="sep"></tr>
           <tr>
             <th colspan="2">
               <div class="big-day">18</div>
@@ -804,7 +800,7 @@
         </p>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4886.145664533968!2d6.848552289726094!3d52.24206074261589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b813c89a5f5b5d%3A0xb418abdfcf79aa17!2sU%20Parkhotel!5e0!3m2!1sen!2snl!4v1762341330387!5m2!1sen!2snl"
-            width="100%" height="450" allowfullscreen="" loading="lazy"
+            height="450" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p class="text">
           The University of Twente is located between two cities: <strong>Hengelo</strong> and <strong>Enschede</strong>.
@@ -943,7 +939,7 @@
         <br>
         <h4>Important Dates</h4>
         <p>
-          <iframe src="https://free.timeanddate.com/clock/ia5w9wr9/n3399/tluk/fn4/fs24/tct/pct/tt0/tw1/tm1/td2/th1/ta1/tb4" width="100%" height="60" allowtransparency="true"></iframe>
+          <iframe src="https://free.timeanddate.com/clock/ia5w9wr9/n3399/tluk/fn4/fs24/tct/pct/tt0/tw1/tm1/td2/th1/ta1/tb4" height="60"></iframe>
         </p>
         <p class="text">
           All dates are in the Anywhere on Earth (AoE, 23:59) calendar designation.
