add a couple of extra links

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </tr>
           <tr>
             <td>19:00 – 23:00</td>
-            <td style="vertical-align: middle;">
+            <td>
               Unofficial pre-opening at
               <br>🍺<a href="https://stanislausbrewskovitch.nl/">Stanislaus Brewskovitch</a> and
               <br>🍻<a href="https://twentschefoodhal.nl/">Twentsche Foodhal</a>🍔
@@ -302,6 +302,7 @@
                   <td>
                     <span class="talk">
                       <a href="pre/paper10.pdf">On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</a>
+                      (cf. <a href="https://purl.utwente.nl/essays/107262" class="ext">BSc</a> &amp; <a href="https://purl.utwente.nl/essays/107264" class="ext">BSc</a> &amp; <a href="https://purl.utwente.nl/essays/107820" class="ext">BSc</a>)
                     </span>
                     <br>
                     <span class="author">Wouter ten Brinke</span>,
@@ -480,6 +481,7 @@
                   <td>
                     <span class="talk">
                       <a href="pre/paper20.pdf">Evaluating Test-Driven Code Generation: A Replication Study</a>
+                      (cf. <a href="https://arxiv.org/abs/2401.08500" class="ext">arXiv</a>)
                     </span>
                     <br>
                     <span class="author presenter">Giovanni Rosa</span>,
@@ -496,6 +498,7 @@
                   <td>
                     <span class="talk">
                       <a href="pre/paper19.pdf">FlaDaGe: A Framework for Generation of Synthetic Data to Compare Flakiness Scores</a>
+                      (cf. <a href="https://doi.org/10.5281/zenodo.17206909" class="ext">replication package</a>)
                     </span>
                     <br>
                     <span class="author">Mert Ege Can</span>,
