automate tool market scheduling, fix some inconsistency problems simply by doing so

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                   <td>
                     <span class="talk"><a href="https://github.com/uhourri/ghmap" class="ext">ghmap</a></span>
                     by
-                    <span class="author presenter">Youness Hourri</span>
+                    <span class="author presenter">Youness Hourri</span>,
                     <span class="author">Alexandre Decan</span>,
                     <span class="author">Tom Mens</span>
                   </td>
@@ -559,7 +559,7 @@
                   <td>16:30 – 16:40</td>
                   <td>🔧</td>
                   <td>
-                    <span class="talk"><a href="https://github.com/omersayilir75/CPSDSL" class="ext">CPSLint</a></span>
+                    <span class="talk"><a href="https://github.com/omersayilir75/CPSDSL" class="ext"><abbr title="Cyber-Physical System">CPS</abbr>Lint</a></span>
                     by
                     <span class="author presenter">Ömer Sayilir</span>,
                     <span class="author">Vadim Zaytsev</span>
@@ -572,7 +572,7 @@
                     <span class="talk"><a href="https://github.com/NiekAukes/rust-gpu-hybrid-compiler" class="ext">rust-gpu-hybrid-compiler</a></span>
                     by
                     <span class="author">Niek Aukes</span>,
-                    <span class="author presenter">Andrei Begu</span>
+                    <span class="author presenter">Cristian-Andrei Begu</span>
                   </td>
                 </tr>
                 <tr>
