add slides for the ghmap demo

--- a/index.html
+++ b/index.html
@@ -545,7 +545,11 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>16:20 – 16:30</td>
+                  <td>
+                    16:20 – 16:30
+                    <br>
+                    (<a href="slides/deckghmap.pdf" class="ext">🖥️slides</a>)
+                  </td>
                   <td>🔧</td>
                   <td>
                     <span class="talk"><a href="https://github.com/uhourri/ghmap" class="ext">ghmap</a></span>
