add slides for talk 18

--- a/index.html
+++ b/index.html
@@ -508,7 +508,11 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>15:40 – 16:00</td>
+                  <td>
+                    15:40 – 16:00
+                    <br>
+                    (<a href="slides/deck18.pdf" class="ext">🖥️slides</a>)
+                  </td>
                   <td>🚀</td>
                   <td>
                     <span class="talk">
